--- a/pages/register.html
+++ b/pages/register.html
@@ -4,26 +4,62 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registrarse</title>
+    <link rel="stylesheet" href="../assets/css/index.css" />
+    <link rel="stylesheet" href="../assets/css/navbar.css" />
+    <link rel="stylesheet" href="../assets/css/footer.css" />
+    <link rel="stylesheet" href="../assets/css/form.css" />
   </head>
   <body>
-    <h1>Registrarse</h1>
-    <form method="POST">
-      <input type="text" name="name" placeholder="Nombre" required /><br />
-      <input
-        type="email"
-        name="email"
-        placeholder="Correo electrónico"
-        required
-      /><br />
-      <input
-        type="password"
-        name="password"
-        placeholder="Contraseña"
-        required
-      /><br />
-      <button type="submit">Registrar</button>
-    </form>
+   
+    <div id="navbar-container"></div>
 
-    <a href="login.html">LOGUEATE</a>
+    <section class="form-section">
+      <h1>Registrarse</h1>
+      <form method="POST" class="register-form">
+        <input
+          type="text"
+          name="name"
+          placeholder="Nombre"
+          required
+          class="form-input"
+        /><br />
+        <input
+          type="email"
+          name="email"
+          placeholder="Correo electrónico"
+          required
+          class="form-input"
+        /><br />
+        <input
+          type="password"
+          name="password"
+          placeholder="Contraseña"
+          required
+          class="form-input"
+        /><br />
+        <button type="submit" class="form-button">Registrar</button>
+      </form>
+      <p>
+        ¿Ya tienes cuenta?
+        <a href="login.html" class="login-link">Inicia sesión aquí</a>
+      </p>
+    </section>
+
+
+    <footer class="footer">
+      <div class="footer-content">
+        <ul>
+          <li><a href="quienesomos.html">Quiénes somos</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="terminos.html">Términos y Condiciones</a></li>
+          <li><a href="politicas.html">Política de privacidad</a></li>
+        </ul>
+      </div>
+    </footer>
+
+    <script src="../assets/js/navbar.js"></script>
+    <script src="../assets/js/productos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.2/dist/sweetalert2.min.js"></script>
+    <script src="../assets/js/showCarrito.js"></script>
   </body>
 </html>
