--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redireccionando...</title>
-    <meta http-equiv="refresh" content="0;url=/pages/index.html" />
+    <meta http-equiv="refresh" content="0;url=pages/index.html" />
   </head>
   <body>
     <p>Redirigiendo...</p>
